Changed user migration. Added administrator seeding when backing up the database migration. When creating a user, we'll wait until a record is created for them in the stripe, and then write it to the database. If there's an error at any stage, or something goes wrong in the stripe, the record won't be updated in the database. Changed the refresh token update logic. Now, when UseGuards is running, we immediately return all the required fields for the access_token and don't re-query the database; now it's only done once. + We now also encode all the data required for the access_token in the refresh_token
